[metadata]
license_file = LICENSE
name = CostReduce
author = Maxence Maireaux
author_email = maxence@maireaux.fr
description = Invoice optimization tool
long_description = file:README.md
project_urls =
    CostReduce source = https://github.com/costreduce/cli/
    CostReduce Website = https://www.costreduce.io/
classifiers =
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.6
include_package_data = True
install_requires=
    pkginfo >= 1.4.2
    boto3 >= 1.13.6
    python-dotenv >= 0.13.0
    click >= 7.1.2
    click-log >= 0.3.2
    texttable >= 1.6.2
setup_requires =
    setuptools_scm >= 3.5

[options.entry_points]
console_scripts =
    costreduce = main:cli
